# my-site

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-create-dotfiles.sh  post-create-pkgs.sh  setup-zsh-history.sh
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
docs/: DOMAIN_HOSTING.md  PROGRESS.md
nginx/: bush_capital  readme.md
src/config/: settings.py  urls.py
src/polls/: apps.py  views.py
