[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mysight"]

[project]
name            = "mysight"
version         = "0.1.0"
description     = "Personal portfolio website for learning web development, data engineering, and ML/DL"
readme          = "README.md"
requires-python = ">=3.14"
authors         = [{ name = "5fx7fv", email = "plaza-homing-7e@icloud.com" }]
keywords        = ["django", "portfolio", "learning"]

dependencies = [
    # Django core
    "Django>=6.0,<7.0",
    "django-extensions>=3.2.3",
    # Environment variables (.env file support)
    "python-dotenv>=1.0,<2.0",
    # Database
    "psycopg[binary]>=3.2,<4.0",
    "redis>=5.0,<6.0",
    "django-redis>=5.4.0",
    # REST API
    "djangorestframework>=3.14,<4.0",
    "drf-spectacular>=0.27,<1.0",
    "django-cors-headers>=4.3,<5.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    # Authentication
    "django-allauth>=0.57,<1.0",
    # Data science & ML
    "plotly>=5.18,<6.0",
    # File handling
    "openpyxl>=3.1,<4.0",
    # Task queue
    "celery>=5.3,<6.0",
    # Utilities
    "requests>=2.31,<3.0",
    "click>=8.1,<9.0",
    "python-dateutil>=2.8,<3.0",
    "pytz>=2024.1",
    "pyyaml>=6.0,<7.0",
    "gunicorn>=22.0.0",
    "whitenoise>=6.11.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=4.1,<5.0",
    "pytest-xdist>=3.5,<4.0",  # Parallel test execution
    "factory-boy>=3.3,<4.0",
    "faker>=24.0,<25.0",

    # Development tools
    "django-debug-toolbar>=4.3,<5.0",
    "ipython>=8.21,<9.0",
    "django-stubs>=4.2,<5.0",         # Type stubs for Django

    # Code quality (Astral.sh stack)
    "ruff>=0.3,<1.0", # Linter and formatter
    "ty>=0.0.17",     # Type checker and language server
]

prod = [
    # WSGI server
    "gunicorn>=22.0,<23.0",

    # Static file serving
    "whitenoise>=6.6,<7.0",

    # Monitoring & error tracking
    "sentry-sdk>=1.40,<2.0",
    "django-health-check>=3.18,<4.0",

    # Security & rate limiting
    "django-ratelimit>=4.1,<5.0",

    # Logging
    "python-json-logger>=2.0,<3.0",
    "structlog>=24.1,<25.0",

    # Performance
    "gevent>=24.2,<25.0",
]

[tool.uv]
# Note: Run 'uv lock' to create uv.lock for reproducible builds
# Without uv.lock, relaxed version constraints will resolve to latest compatible versions

[tool.ruff]
# Ruff configuration for linting and formatting
line-length    = 120
target-version = "py314"

[tool.ruff.lint]
preview = true
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501", # Line too long (handled by formatter)
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at second line
]

per-file-ignores = { "tests/*" = ["D"], "migrations/*" = ["D"] }

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pylint]
max-args = 5

[tool.pytest.ini_options]
# Django settings module for tests (update when you create src/config/settings/test.py)
DJANGO_SETTINGS_MODULE = "config.settings.test"

# Test file patterns
python_files = ["tests.py", "test_*.py", "*_tests.py"]

# Test discovery paths (update based on your structure)
# Option 1: If tests are in src/tests/
testpaths = ["src"]
# Option 2: If tests are in separate tests/ directory
# testpaths = ["tests"]

# Pytest options
addopts = """
    --strict-markers
    --strict-config
    --cov=src
    --cov-report=html
    --cov-report=term-missing:skip-covered
    --cov-fail-under=80
    -ra
    -q
"""

# Custom markers for organizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
# Source code to analyze for coverage
source = ["src"]

# Files/patterns to exclude from coverage
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/settings/*",
    "*/wsgi.py",
    "*/asgi.py",
    "*/manage.py",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
